# 4yMail

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
electron/: mail.js  main.js  manager.js  preload.js
src/: App.vue
src/assets/styles/: global.css
src/components/: ComposeMail.vue  GlassSelect.vue  MailContent.vue  MailList.vue  SettingsPanel.vue  SideNav.vue  TitleBar.vue  WindowControls.vue
tauri/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tauri-bridge.js  vite.config.js
tauri/src/: App.vue
tauri/src-tauri/: Cargo.toml  errors.txt  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  mail.rs  main.rs
tauri/src/components/: ComposeMail.vue  MailContent.vue  MailList.vue  SettingsPanel.vue  SideNav.vue  WindowControls.vue
